Publications page updated

--- a/publications.html
+++ b/publications.html
@@ -41,6 +41,18 @@
 
 <h3>Books</h3>
 
+<p><strong><a href="https://helion.pl/ksiazki/ioprak.htm"> Inżynieria oprogramowania w praktyce. Od wymagań do kodu z językiem UML (Software Engineering in Practice. From Requirements to Code with UML)- Helion 2024</a></strong></p>
+
+<p><a href="https://helion.pl/ksiazki/ioprak.htm"><img class="size-full wp-image-97 alignright" src="/images/ioprak.jpg" alt="" width="181" height="236" style="float:left; margin-right:20px;"/></a>The book is written in Polish and it teaches software engineering with significant use of UML 2.0 as a notation for various software development artifacts. It presents the fundamentals of software engineering, including methodologies, disciplines, roles, activities, work products in typical software projects. It covers such topics as: software development lifecycles and methodologies, object-oriented modelling, modeling of system's structure and dynamics, fundamentals of requirements engineering, software design and implementation, testing, software development automation tools. </p>
+
+<div style="clear:left;"></div>
+
+<p><strong><a href="https://helion.pl/ksiazki/inwyop.htm"> Inżynieria wymagań oprogramowania (Software Requirements Engineering) - Helion 2024</a></strong></p>
+
+<p><a href="https://helion.pl/ksiazki/inwyop.htm"><img class="size-full wp-image-97 alignright" src="/images/inwyop.jpg" alt="" width="181" height="236" style="float:left; margin-right:20px;"/></a>The book is written in Polish and it teaches software requirements engineering as one of the fundamental disciplines of software engineering. It presents various techniques and notations for eliciting, specifying and analysing requirements at different levels. It covers such topics as: organisation and quality of requirements, functional, quality and vocabulary requirements, system vision, user requirements, software requirements, scenarios, storyboards and prototyping.</p>
+
+<div style="clear:left;"></div>
+
 <p><strong><a href="https://www.springer.com/gp/book/9783319128375"> From Requirements to Java in a Snap - Springer 2015 </a></strong></p>
 
 <p><a href="https://www.springer.com/gp/book/9783319128375"><img class="size-full wp-image-94 alignright" src="/images/springer.jpg" alt="" width="153" height="230" style="float:left; margin-right:20px;"  /></a>This book provides a coherent methodology for Model-Driven Requirements Engineering which stresses the systematic treatment of requirements within the realm of modelling and model transformations. The underlying basic assumption is that detailed requirements models are used as first-class artefacts playing a direct role in constructing software. To this end, the book presents the Requirements Specification Language (RSL) that allows precision and formality, which eventually permits automation of the process of turning requirements into a working system by applying model transformations and code generation to RSL.</p>
